fixed main overflow

--- a/src/app/content/content.component.scss
+++ b/src/app/content/content.component.scss
@@ -2,6 +2,7 @@
 
 .main {
   @include display-flex($ai: flex-start);
+  overflow-x: clip;
 }
 
 .content {
